[package]
description = "Platz.io SDK"
edition = "2021"
license = "Apache-2.0"
name = "platz-sdk"
repository = "https://github.com/platzio/sdk-rs"
version = "0.5.7"

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
async-trait = "0.1.81"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
futures = "0.3.30"
kv-derive = "1.0.1"
lazy_static = "1.5.0"
platz-chart-ext = "0.5.13"
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
rust_decimal = "1.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.9.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
